# rust-ts-assessment

./: README.md
ai-paraphraser-backend/: .gitignore  Cargo.toml
ai-paraphraser-backend/src/: main.rs
ai-paraphraser-frontend/: .gitignore  package-lock.json  package.json
ai-paraphraser-frontend/src/: App.css  App.tsx
