[package]
name = "ai-paraphraser-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.48.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
dotenvy = "0.15"
actix-cors = "0.7.1"
shuttle-actix-web = "0.48.0"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }

